--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@next/font": "^13.2.4",
     "@vercel/analytics": "^0.1.11",
     "clsx": "^1.2.1",
